k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicare-ingress
  namespace: medicare-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: medicare-backend
                port:
                  number: 8082

          - path: /
            pathType: Prefix
            backend:
              service:
                name: medicare-frontend
                port:
                  number: 80
